<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Delivery Earning Tracker</string>
    <string name="data" tools:ignore="MissingTranslation">Data</string>
    <string name="paga_base">Paga Base (%s)</string>
    <string name="paga_extra">Paga Extra (%s)</string>
    <string name="mancia">Mancia (%s)</string>
    <string name="riscossi_contanti">Riscossi Contanti (%s)</string>
    <string name="numero_ordini">Numero Ordini</string>
    <string name="tempo_impiegato">Tempo Impiegato (min o hh:mm-hh:mm)</string>
    <string name="paga_oraria">Paga Oraria (%s/h)</string>
    <string name="paga_totale">Paga Totale (%s)</string>
    <string name="new_order">Nuovo Ordine</string>
    <string name="edit_order">Modifica Ordine</string>
    <string name="provider">Provider</string>
    <string name="pagato_contanti_ristorante">Pagato contanti al ristorante (%1$s)</string>
    <string name="warning_double_order_time">Attenzione: il tempo impiegato potrebbe non includere tutte le consegne. Correggilo per calcoli corretti della paga oraria.</string>
    <string name="save">Salva</string>
    <string name="cancel">Annulla</string>
    <string name="delete_confirmation_title">Conferma Eliminazione</string>
    <string name="delete_confirmation_message">Sei sicuro di voler eliminare questo ordine?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="hint_tempo_impiegato">Es. 120 o 12:47-13:26</string>
    <string name="orders">Ordini: %d</string>
    <string name="total">Totale: %s</string>
    <string name="time_spent">Tempo: %d min</string>
    <string name="hourly_rate">Oraria: %s/h</string>
    <string name="total_paga_base">Paga Base Totale</string>
    <string name="total_paga_extra">Paga Extra Totale</string>
    <string name="total_mancia">Mancia Totale</string>
    <string name="total_paga_totale">Paga Totale Totale</string>
    <string name="total_numero_ordini"># Ordini Totali</string>
    <string name="total_tempo_impiegato">Tempo Totale Impiegato</string>
    <string name="total_paga_oraria">Paga Oraria Media</string>
    <string name="add_order">Aggiungi Ordine</string>
    <string name="ordini">Ordini</string>
    <string name="totale">Totale</string>
    <string name="base">Base</string>
    <string name="extra">Extra</string>
    <string name="mancia_grid">Mancia</string>
    <string name="add_new_order">NUOVO ORDINE</string>
    <string name="tempo">Tempo</string>
    <string name="oraria">Oraria</string>
    <string-array name="interval_types">
        <item>Giorno</item>
        <item>Settimana</item>
        <item>Mese</item>
    </string-array>
    <string name="navigation_drawer_open">Apri menu</string>
    <string name="navigation_drawer_close">Chiudi menu</string>
    <string name="tempo_impiegato_ocr">Tempo Impiegato (min)</string>
    <string name="data_ocr_immagine">Seleziona la data dell\'ordine:</string>
    <string name="seleziona_immagine">Scegli il File</string>
    <string name="versione_gratis">Versione Gratuita</string>
    <string name="image_racognition">Riconoscimento Immagine</string>
    <string name="settings">Impostazioni</string>
    <string name="csv_menu">Esporta Dati</string>
    <string name="csv_tooltip_menu">Genera un file CSV con i dati degli ordini</string>
    <string name="pref_currency_symbol">Simbolo Valuta</string>
    <string name="pref_currency_symbol_description">Seleziona la valuta da usare nell\'app</string>
    <string name="pref_night_mode">Modalità Notte</string>
    <string name="pref_night_mode_description">Attiva/disattiva tema scuro</string>
    <string name="pref_backup_data">Backup Dati</string>
    <string name="pref_backup_data_description">Crea una copia del database in una cartella scelta</string>
    <string name="pref_restore_data">Ripristina Dati</string>
    <string name="pref_restore_data_description">Ripristina il database da un backup</string>
    <string name="pref_reset_settings">Reset Impostazioni</string>
    <string name="pref_reset_settings_description">Ripristina le impostazioni predefinite</string>
    <string name="csv_start_date">Data Inizio</string>
    <string name="csv_end_date">Data Fine</string>
    <string name="csv_button_create">Esporta CSV</string>
    <string name="csv_error_abort">Esportazione annullata</string>
    <string name="csv_export_success">Dati esportati con successo</string>
    <string name="csv_error_failed">Errore durante l\'esportazione: %s</string>
    <string name="pref_backup_aborted">Backup annullato</string>
    <string name="pref_restore_aborted">Ripristino annullato</string>
    <string name="pref_restore_success">Database ripristinato con successo</string>
    <string name="pref_backup_completed">Backup completato</string>
    <string name="pref_backup_unable_file">Impossibile creare il file di backup</string>
    <string name="pref_invalid_folder">Cartella non valida</string>
    <string name="pref_error_backup">Errore durante il backup: %s</string>
    <string name="pref_error_restore">rrore durante il ripristino: %s</string>
    <string name="csv_header">ID%1$sData%1$sPagaBase%1$sPagaExtra%1$sMancia%1$sNumeroOrdini%1$sTempoImpiegato%1$sPagaTotale%1$sPagaOraria\n</string>
    <string name="mancia_contanti">Mancia in Contanti (%1$s)</string>
    <string name="title_activity_pdfimport">Importa Statino</string>
    <string name="button_ocr_text_uses">Seleziona File (Utilizzi OCR: %d)</string>
    <string name="button_ocr_text_ads">Guarda Annuncio per OCR</string>
    <string name="button_ocr_text_noAds">Seleziona File</string>
    <string name="pdfImport_Statino_ok">"Statino inserito correttamente\nNumero: %1$s\nPeriodo: %2$s "</string>
    <string name="pdfImport_Statino_ko">Errore durante l\'estrazione del testo: %s</string>
    <string name="add_new_order_ocr">NUOVO ORDINE OCR</string>
    <string name="reports">Rapporti</string>
    <string name="show_monthly_paystub">Mostra Statino Mensile</string>
    <string name="quarterly_summary">Riepilogo Trimestre</string>
    <string name="yearly_summary">Riepilogo Annuale</string>
    <string name="paystub_reconciliation">Riconciliazione Statini</string>
    <string name="import_pdf_data_tooltip">Importa i dati dal PDF mensile</string>
    <string name="act_anno_categoria">Categoria</string>
    <string name="act_anno_lordo">Lordo</string>
    <string name="act_anno_netto">Netto</string>
    <string name="act_anno_iva">IVA</string>
    <string name="act_anno_ordini">Ordini</string>
    <string name="act_anno_integrazioni">Integrazioni</string>
    <string name="act_anno_mance">Mance</string>
    <string name="act_anno_consegne">Consegne</string>
    <string name="act_anno_bonus">per il bonus</string>
    <string name="act_OCR_usa_data">Usa data</string>
    <string name="pdfimport_button_text">Guarda annuncio per importare lo statino</string>
    <string name="pdfimport_button_text_noAds">Importa lo statino</string>
    <string name="act_statino_riepilogo">Riepilogo</string>
    <string name="act_statino_chiudi">Chiudi</string>
    <string name="label_inserimento_ordine">Inserimento Ordine</string>
    <string name="label_impostazioni">Impostazioni</string>
    <string name="label_importazone_statino">Importazione Statino</string>
    <string name="label_visualizza_statino">Visualizzazione Statino</string>
    <string name="label_trimestrale">Riepilogo Trimestrale</string>
    <string name="label_annuale">Riepilogo Annuale</string>
    <string name="label_riconciliazione">Riconciliazione Statini</string>
    <string name="label_ordini_errati">Ordini da riconciliare</string>
    <string name="help_title">Help</string>
    <string name="label_esportazione">Esportazione Dati</string>
    <string name="settings_title">Impostazioni</string>
    <string name="pref_anonymous_stats">Condividi statistiche anonime</string>
    <string name="pref_anonymous_stats_description">Aiutaci a migliorare l\'app inviando dati aggregati anonimizzati.</string>
    <string name="pref_remove_ads">Rimuovi gli annunci</string>
    <string name="pref_remove_ads_description">Abbonati per rimuovere gli annunci ed avere tutte le funzionalità.</string>
    <string name="invite_friend_feature_disabled">Funzionalità "Invita un Amico" temporaneamente disabilitata.</string>
    <string name="invite_friend_status">Invita %1$d amici per ottenere %2$d giorni senza annunci!</string>
    <string name="invite_friend_code_label">Il tuo codice: %1$s</string>
    <string name="invite_friend_button">Invita un Amico</string>
    <string name="invite_friend_message"><![CDATA[Scarica Ddelivery Earning Tracker <a href="%1$s">qui</a> con il mio codice: %2$s]]></string>
    <string name="invite_friend_count">%1$d/%2$d amici invitati</string>
    <string name="invite_friend_reward_granted">Hai ricevuto %1$d giorni senza annunci!</string>
    <string name="invite_friend_connection_error">Errore di connessione. Riprova.</string>
    <string name="invite_friend_feature_not_supported">API Install Referrer non supportata</string>
    <string name="invite_friend_service_unavailable">Servizio Install Referrer non disponibile</string>
    <string name="invite_friend_registered">Invito registrato per %1$s</string>
    <string name="invite_friend_registration_error">Errore registrazione invito: %1$s</string>
    <string name="invite_friend_title">Invita un Amico</string>
    <string name="statement_orders">Ordini</string>
    <string name="statement_integrations">Integrazioni</string>
    <string name="statement_tips">Mance</string>
    <string name="statement_total">Totale</string>
    <string name="statement_gross">Lordo</string>
    <string name="statement_withholding_tax">Ritenuta</string>
    <string name="statement_vat">IVA</string>
    <string name="statement_cash_collected">Riscossi in contanti</string>
    <string name="statement_total_due">Totale dovuto</string>
    <string name="close">Chiudi</string>
    <string name="csv_date_tip" translatable="false">yyyy-MM-ddd</string>
    <string name="time_format_hours_minutes" translatable="false">%d h %d m</string>
    <string name="time_format_minutes" translatable="false">%d m</string>
    <string name="total_numero_ordini_value" translatable="false"># %d</string>
    <string name="reconciliation_date">Data</string>
    <string name="reconciliation_daily_compensation">Compenso\n(Daily)</string>
    <string name="reconciliation_orders_compensation">Compenso\n(Ordini)</string>
    <string name="reconciliation_daily_orders">Ordini\n(Daily)</string>
    <string name="reconciliation_orders_count">Ordini\n(Ordini)</string>
    <string name="reconciliation_monthly_totals">Totali</string>
    <string name="reconciliation_statement">Statino</string>
    <string name="reconciliation_orders">Ordini</string>
    <string name="reconciliation_difference">Differenza</string>
    <string name="reconciliation_tips">Mance</string>
    <string name="reconciliation_cash">Contanti</string>
    <string name="view_statement">Visualizza statino</string>
    <string name="pdf_too_large">Il file è troppo grande (max 100 KB).</string>
    <string name="pdf_invalid_format">Il file non è nel formato atteso.</string>
    <string name="pdf_extraction_failed">Errore durante l\'elaborazione del file.</string>
    <string name="pdf_duplicate">Questo statino è già stato inserito.</string>
    <string name="ocr_too_large">L\'immagine è troppo grande (max 5 MB).</string>
    <string name="ocr_load_failed">Impossibile caricare l\'immagine.</string>
    <string name="ocr_processing_failed">Errore durante l\'elaborazione OCR.</string>
    <string name="free_trial_details">Prova gratuita per %1$s, poi %2$s/anno</string>
    <string name="monthly_payments_details">12 pagamenti mensili</string>
    <string name="default_recurrence">Rinnovo non specificato</string>
</resources>