<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:fitsSystemWindows="true"
    android:background="@color/background_color">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csv_start_date"
        android:textColor="@color/text_color"/>

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/csv_date_tip"
        android:inputType="date"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csv_end_date"
        android:textColor="@color/text_color"/>

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/csv_date_tip"
        android:inputType="date"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csv_button_create"
        android:theme="@style/CustomButton"/>

</LinearLayout>