<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:padding="4dp">
    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layoutDirection="locale" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/data_ocr_immagine"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
            <!-- Aggiunta del toggle (Switch) -->
            <Switch
                android:id="@+id/toggleUseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/act_OCR_usa_data"
                android:textColor="@color/text_color" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/editbox_background"
            android:padding="8dp"
            android:text="@string/csv_date_tip"
            android:textSize="14sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- Pulsante per scegliere file/cartella -->
    <Button
        android:id="@+id/select_file_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleziona_immagine"
        style="@style/CustomButton"
        android:layout_marginBottom="16dp" />

    <!-- ImageView con supporto zoom/pan -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside" />
    </androidx.core.widget.NestedScrollView>

    <!-- Griglia per i dati -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <!-- Pulsanti Salva/Annulla -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/cancel"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>